# rm_auto_ws

./: .gitignore  README.md  start.sh
src/auto_align/: CMakeLists.txt  package.xml
src/auto_align/launch/: default.launch
src/auto_align/src/: auto_align_node.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: default.launch  only_referee_system.launch  remote.launch  simulation.launch  without_depth.launch
src/common/: CMakeLists.txt  package.xml  setup.py
src/common/msg/: cmd_action.msg  cmd_align.msg  cmd_belt.msg  cmd_vel.msg  game_state.msg  serial_received_msg.msg  serial_send_msg.msg  target_center.msg
src/common/src/gui_package/: UI_gui.py  gui.ui
src/common/src/robot_package/: UI_gui.py  robot.py
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: default.launch
src/controller/src/: controller_node.cpp
src/detector/: CMakeLists.txt  package.xml
src/detector/launch/: default.launch
src/detector/src/: detector_node.cpp
src/flow_control/: CMakeLists.txt  package.xml
src/flow_control/launch/: default.launch
src/flow_control/scripts/: flow_control_node.py
src/monocular_camera/: CMakeLists.txt  package.xml
src/monocular_camera/launch/: default.launch
src/monocular_camera/src/: monocular_camera_node.cpp
src/observer/: CMakeLists.txt  package.xml
src/observer/launch/: default.launch
src/observer/scripts/: observer_node.py
src/referee_system/: CMakeLists.txt  package.xml
src/referee_system/include/referee_system/: crc.h  referee_option.h  referee_system.h  referee_system_def.h  serial_device.h
src/referee_system/launch/: default.launch
src/referee_system/src/: crc.cpp  referee_system.cpp  referee_system_node.cpp  serial_device.cpp
src/serial/: CMakeLists.txt  package.xml
src/serial/launch/: default.launch
src/serial/src/: serial_node.cpp
src/turtle_bridge/: CMakeLists.txt  package.xml
src/turtle_bridge/launch/: default.launch
src/turtle_bridge/src/: turtle_bridge_node.cpp
